--- a/index.html
+++ b/index.html
@@ -1,1 +1,16 @@
-hello everyone
+<!DOCTYPE html>
+<html>
+
+	<head>
+		<meta charset="utf-8" />
+		<title>html learing</title>
+	</head>
+
+	<body>
+
+		<h1>My Works</h1>
+		<p>Modeling Rending</p>
+
+	</body>
+
+</html>
