--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
 
 		<h1>My Works</h1>
 		<p>Modeling Rending</p>
+		<img src="img/blue cup.jpg">
+		<img src="img/myhous34.jpg" />
+		<img src="img/pillow.png" />
+		<img src="img/ring.png" />
+		<img src="img/watermelon.png">
 
 	</body>
 
