--- a/index.html
+++ b/index.html
@@ -1,5 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
+	<!--
+	作者：offline
+	时间：2019-09-03
+	描述：
+-->
 
 	<head>
 
@@ -127,16 +132,6 @@
 						</div>
 					</div>
 
-					<div class="resume-item d-flex flex-column flex-md-row mb-5">
-						<div class="resume-content mr-auto">
-							<h3 class="mb-0">BIM软件工程师</h3>
-							<div class="subheading mb-3">广州君和信息技术有限公司</div>
-							<p>开发基于Bentley Microstation和Autodesk Revit的插件程序.</p>
-						</div>
-						<div class="resume-date text-md-right">
-							<span class="text-primary">December 2011 - March 2013</span>
-						</div>
-					</div>
 
 					<div class="resume-item d-flex flex-column flex-md-row mb-5">
 						<div class="resume-content mr-auto">
@@ -146,17 +141,6 @@
 						</div>
 						<div class="resume-date text-md-right">
 							<span class="text-primary">July 2010 - December 2011</span>
-						</div>
-					</div>
-
-					<div class="resume-item d-flex flex-column flex-md-row">
-						<div class="resume-content mr-auto">
-							<h3 class="mb-0">BIM研发工程师</h3>
-							<div class="subheading mb-3">广州华建工智慧科技有限公司</div>
-							<p> 开发基于BIM的算量软件.</p>
-						</div>
-						<div class="resume-date text-md-right">
-							<span class="text-primary">September 2008 - June 2010</span>
 						</div>
 					</div>
 
@@ -179,71 +163,17 @@
 						</div>
 					</div>
 
-					<div class="resume-item d-flex flex-column flex-md-row">
-						<div class="resume-content mr-auto">
-							<h3 class="mb-0">中国地质大学</h3>
-							<div class="subheading mb-3">国际金融</div>
-
-						</div>
-						<div class="resume-date text-md-right">
-							<span class="text-primary">August 2002 - May 2006</span>
-						</div>
-					</div>
-
 				</div>
 			</section>
 
 			<section class="resume-section p-3 p-lg-5 d-flex flex-column" id="skills">
 				<div class="my-auto">
 					<h2 class="mb-5">技能点</h2>
-
-					<div class="subheading mb-3">编程语言 &amp; 工具</div>
-					<ul class="list-inline list-icons">
-						<li class="list-inline-item">
-							<i class="devicons devicons-html5"></i>
-						</li>
-						<li class="list-inline-item">
-							<i class="devicons devicons-css3"></i>
-						</li>
-						<li class="list-inline-item">
-							<i class="devicons devicons-javascript"></i>
-						</li>
-						<li class="list-inline-item">
-							<i class="devicons devicons-jquery"></i>
-						</li>
-						<li class="list-inline-item">
-							<i class="devicons devicons-sass"></i>
-						</li>
-						<li class="list-inline-item">
-							<i class="devicons devicons-less"></i>
-						</li>
-						<li class="list-inline-item">
-							<i class="devicons devicons-bootstrap"></i>
-						</li>
-						<li class="list-inline-item">
-							<i class="devicons devicons-wordpress"></i>
-						</li>
-						<li class="list-inline-item">
-							<i class="devicons devicons-grunt"></i>
-						</li>
-						<li class="list-inline-item">
-							<i class="devicons devicons-gulp"></i>
-						</li>
-						<li class="list-inline-item">
-							<i class="devicons devicons-npm"></i>
-						</li>
-					</ul>
-
-					<div class="subheading mb-3">Workflow</div>
-					<ul class="fa-ul mb-0">
-						<li>
-							<i class="fa-li fa fa-check"></i> Mobile-First, Responsive Design</li>
-						<li>
-							<i class="fa-li fa fa-check"></i> Cross Browser Testing &amp; Debugging</li>
-						<li>
-							<i class="fa-li fa fa-check"></i> Cross Functional Teams</li>
-						<li>
-							<i class="fa-li fa fa-check"></i> Agile Development &amp; Scrum</li>
+					<ul>
+						<li>三维设计</li>
+						<li>开发</li>
+						<li>BIM/VR</li>
+						<li>Arduino</li>
 					</ul>
 				</div>
 			</section>
@@ -251,7 +181,6 @@
 			<section class="resume-section p-3 p-lg-5 d-flex flex-column" id="interests">
 				<div class="my-auto">
 					<h2 class="mb-5">兴趣爱好</h2>
-					<p>产品设计和控制.</p>
 					<p>摄影.</p>
 					<p>3D游戏制作.</p>
 				</div>
@@ -263,22 +192,22 @@
 					<ul class="fa-ul mb-0">
 						<li>
 							<a href="graphic design.html">平面设计作品</a>
-							<i class="fa-li fa fa-trophy text-warning"></i> 
+							<i class="fa-li fa fa-trophy text-warning"></i>
 						</li>
 						<li>
-														<a href="3D.html">三维设计</a>
-							<i class="fa-li fa fa-trophy text-warning"></i> 
+							<a href="3D.html">三维设计</a>
+							<i class="fa-li fa fa-trophy text-warning"></i>
 						</li>
 						<li>
-																					<a href="BIM Design.html">BIM</a>
-							<i class="fa-li fa fa-trophy text-warning"></i>  
+							<a href="BIM Design.html">BIM</a>
+							<i class="fa-li fa fa-trophy text-warning"></i>
 						</li>
 						<li>
-																												<a href="VR.html">VR</a>
-							<i class="fa-li fa fa-trophy text-warning"></i>  
+							<a href="VR.html">VR</a>
+							<i class="fa-li fa fa-trophy text-warning"></i>
 						</li>
 						<li>
-							<i class="fa-li fa fa-trophy text-warning"></i>  软件
+							<i class="fa-li fa fa-trophy text-warning"></i> 软件
 						</li>
 
 					</ul>
